src/app/app.component.css
.mode-wrapper {
 display: flex;
 flex-direction: column;
  overflow-y: hidden;
}

.mode-variant-wrapper  {
  display: flex;
  flex-direction: column;
  height: 100vh;
  overflow-y: hidden;
}

main {
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.main-container {
  display: flex;
  flex: 1;
  flex-direction: column;
  width: 100%;
  max-width: 600px;
}

.side-menu-and-main {
  display: flex;
  flex-grow: 1;
  overflow-y: hidden;
}

.mobile-nav-item {
  display: none;
}

tds-header {
  position: sticky;
  top: 0;
}

.user-dropdown [slot='icon'] tds-badge{
    position: absolute;
    top: 12px;
    right: 18px;
}

.switcher-container {
  padding-top: 16px;
  position: absolute;
  right: 32px;
  z-index: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

@media (min-width: 992px) {
  tds-side-menu {
    height:100%;
    position: sticky;
    top: 64px;
    left: 0;
  }
}

@media screen and (max-width: 992px) {
  .mobile-nav-item {
    display: block;
  }
}

